# raspberry_src

./: .gitignore  README.md  prompt.txt
25aa02e48/: CMakeLists.txt  Makefile  README.md
25aa02e48/include/: main.h
25aa02e48/scripts_tools_25aa02e48/: install_deps.sh  run.sh
25aa02e48/skills/: 25aa02e48.md
25aa02e48/src/: main.cc
ALS31313_Pi/skills/: ALS31313_Pi.md
ALS31313_Pi/src/: als31313.c
ads1115/: Makefile  README.md
ads1115/ads1115/: CMakeLists.txt  README.md  ads1115.cc
ads1115/scripts/: install_deps.sh
ads1115/skills/: ads1115.md
als31313/: .gitignore  Makefile  README.md
als31313/scripts/: install_deps.sh
arcade/arcade_png_divisor/: .gitignore
arcade/arcadedivisor/: divisor_png.py
arcade/dino/: DinoEngine.cpp  DinoEngine.h  DinoGraphics.cpp  DinoGraphics.h  DinoHardware.h  DinoSound.cpp  README.md  main_dino.cpp
arcade/mario/: .gitignore  Makefile  README.md
arcade/mario_bros_rpi/: README.txt
arcade/pacman/: Makefile
arcade/tetris/: Makefile  README.md
btc_oled/: .gitignore  Makefile  README.md
btc_oled/include/: btc.hpp  ip_global.hpp
btc_oled/scripts/: install_deps.sh
btc_oled/skills/: btc_oled.md
dino/: Makefile
dino/include/: DinoEngine.h  DinoGraphics.h  DinoSound.h
dino/skills/: dino.md
dino/src/: DinoEngine.cpp  main_dino.cpp
ds1994/: .gitignore  Makefile  README.md
ds1994/ds1994_deepseek_success/: build_gen_ds1984_f5_v2.sh
ds1994/olds_ds1994_deepseek_success/: build_gen_ds1984_f5_v3.sh
ds1994/scripts_ds1994/: install_deps.sh
ds1994/scrpits_ds1994/: verif_ds1994.sh
ds1994/scrpits_tools_ds1994/: busqueda_ds1994.sh  ds2482_detect.sh  reset_kernel_w1_ds1994.sh
ds1994/skills/: ds1994.md
ds1994/src/: main.cpp
ds1994/src_deepseek/: main.cpp
ds2482/: .gitignore  Makefile  README.md  compile.sh  funcCommandsDs1994.sh  onewired.sh
ds2482/scripts/: commandsDs284.sh  install_deps.sh
ds2482/skills/: ds2482.md
ds2482/src/: ds1994.cc  ds2482Ds1994.cc
elm327_oled/: .gitignore  CMakeLists.txt
elm327_oled/config/: obd2_rpi.conf
elm327_oled/docs/: architecture.md  configuration.md  pid_reference.md
elm327_oled/include/: gm_commands.hpp  logger.hpp  ssd1306.hpp
elm327_oled/include/obd2_rpi/: config.hpp  display_iface.hpp  pid.hpp
elm327_oled/scripts/: build.sh  install_service.sh
elm327_oled/skills/: obd2_rpi.md
elm327_oled/src/: elm327.cpp  gm_commands.cpp  oled_display.cpp  pid.cpp
elm327_oled_v1/: .gitignore  CMakeLists.txt  Makefile  README.md
elm327_oled_v1/include/: BluetoothManager.hpp  comunicacion.hpp  funciones.hpp  gpio.hpp  oled.hpp
elm327_oled_v1/scripts/: install_deps.sh
elm327_oled_v1/skills/: elm327_oled_v1.md
elm327_oled_v1/src/: BluetoothManager.cpp  comunicacion.cpp  funciones.cpp  main.cpp  oled.cpp
elm_327_rpi_oled_v16/: .gitignore  Makefile  README.md  elm_327_rpi_oled_v16.sh
elm_327_rpi_oled_v16/obd2_rpi/: CHANGELOG.md  README.md  obd2_rpi.service
elm_327_rpi_oled_v16/scripts/: install_deps.sh
elm_327_rpi_oled_v16/skills/: elm_327_rpi_oled_v16.md
epaper/: .gitignore  Makefile  README.md
epaper/bash/: menuConfigGpiosSuccess.sh  setGpioPinsOutput.sh  uniquePinGpio.sh
epaper/epaper_display_rpi_2w/: Makefile
epaper/epaper_src/: Makefile
epaper/epd_rpi_claude/: Makefile
epaper/scripts/: runGdb.sh  spiSettings.sh
epaper/skills/: epaper.md
epaper_display_rpi_2w/: CMakeLists.txt  Makefile  README.md
epaper_display_rpi_2w/include/: config.h  epaper.h
epaper_display_rpi_2w/scripts/: install_deps.sh
epaper_display_rpi_2w/src/: epaper.cpp  main.cpp
fflush/: .gitignore  Makefile  README.md  compile.sh
fflush/scripts/: install_deps.sh
fflush/skills/: fflush.md
fflush/src/: flush.cc  main.cc
gsm/: Makefile  README.md
gsm/include/: sim800.h
gsm/scripts/: install_deps.sh  sim800_init.sh  sim800_send_msj.sh
gsm/sim800Bash/: sim800_call.sh
gsm/sim800Cpp/: main.cc
gsm/skills/: gsm.md
gsm/src/: call.cpp  call_dtmf.cpp  sim800.cpp  sms_send.cpp
install_rpi/: .gitignore  README.md  install_rpi.sh
ke-rpi-samples/: .gitignore  Makefile  README.md  prompt.txt
ke-rpi-samples/scripts/: install_deps.sh
ke-rpi-samples/skills/: ke-rpi-samples.md
libnfc/: .gitignore  README.md
libnfc/skills/: libnfc.md
mrf24j40/: Makefile  README.md
openScopeMZ/: .gitignore  README.md  config_pyhton_for_rpi_ospensopeMS.sh  openScopeMZ_Flutter_v1.0.1.py  openScopeMZ_Flutter_v1.0.2.py  openScopeMZ_v1.4.0.py  openScopeMZ_v1.4.1.py  openScopeMZ_v1.4.2.py  openScopeMZ_v1.4.3.py  openScopeMZ_v1.4.4.py  oscope_server_v1.py  requirements.txt
pn532/: .gitignore  Makefile  README.md
space_invaders/: .gitignore  README.md
ssd1963/: Makefile
tetris/: readme.md
www/: .gitignore  README.md  cordova_plugins.js
(+283 files in other folders)
